# fpga-emmc-card-reader

./: .gitignore  CLAUDE.md  GOWIN_OPTIMIZATION.md  README.md  build.sbt  build.tcl  build_fifo.tcl  card_reader.gprj  card_reader_fifo.gprj
.github/workflows/: sim.yml
docs/: cli_reference.md  fpga_internals.md  gui.md  hardware.md  protocol.md  speed.md  testbenches.md  verification_mechanisms.md
emmc-gui/: Cargo.toml
emmc-gui/crates/emmc-app/: Cargo.toml
emmc-gui/crates/emmc-app/src/: lib.rs  logging.rs  operations.rs  state.rs
emmc-gui/crates/emmc-core/: Cargo.toml
emmc-gui/crates/emmc-core/src/: card_info.rs  lib.rs  partition.rs  protocol.rs  rpmb.rs  transport.rs  transport_fifo.rs  transport_serial.rs
emmc-gui/crates/emmc-core/src/ext4/: checksum.rs  directory.rs  file_ops.rs  inode.rs  mod.rs  superblock.rs
emmc-gui/crates/emmc-gui/: Cargo.toml
emmc-gui/crates/emmc-gui/src/: app.rs  main.rs  theme.rs
emmc-gui/crates/emmc-gui/src/panels/: card_info.rs  confirm_dialog.rs  connection.rs  ext4_browser.rs  hex_editor.rs  log.rs  mod.rs  partition.rs  sector.rs
emmc-gui/crates/emmc-gui/src/widgets/: hex_edit.rs  hex_view.rs  mod.rs
emmc-programmer/: Cargo.toml  README.md
emmc-programmer/crates/programmer-engine/: Cargo.toml
emmc-programmer/crates/programmer-engine/src/: command.rs  image.rs  lib.rs  logging.rs  operations.rs  state.rs  verify.rs
emmc-programmer/crates/programmer-engine/tests/: state_test.rs
emmc-programmer/crates/programmer-fpga/: Cargo.toml
emmc-programmer/crates/programmer-fpga/examples/: full_hw_test.rs  partition_test.rs  rename_partition.rs
emmc-programmer/crates/programmer-fpga/src/: adapter.rs  lib.rs
emmc-programmer/crates/programmer-gui/: Cargo.toml
emmc-programmer/crates/programmer-gui/src/: app.rs  main.rs  theme.rs
emmc-programmer/crates/programmer-gui/src/panels/: chip_info.rs  confirm.rs  connection.rs  filesystem.rs  hex_editor.rs  image_manager.rs  log.rs  mod.rs  operations.rs  partitions.rs
emmc-programmer/crates/programmer-gui/src/widgets/: hex_edit.rs  hex_view.rs  mod.rs  progress.rs  sector_map.rs
emmc-programmer/crates/programmer-hal/: Cargo.toml
emmc-programmer/crates/programmer-hal/src/: chip_db.json  chip_db.rs  error.rs  lib.rs  traits.rs
hw/spinal/emmcreader/: Crc16.scala  Crc7.scala  Crc8.scala  EmmcCardReader.scala  EmmcCmd.scala  EmmcController.scala  EmmcDat.scala  EmmcInit.scala  Ft245Fifo.scala  GowinPll.scala  LedStatus.scala  SectorBuf.scala  SectorBufWr.scala  UartBridge.scala  UartRx.scala  UartTx.scala
hw/test/emmcreader/: Crc16Sim.scala  Crc7Sim.scala  Crc8Sim.scala  EmmcCardStub.scala  EmmcCmdSim.scala  EmmcControllerSim.scala  EmmcDatSim.scala  EmmcInitSim.scala  Ft245FifoSim.scala  LedStatusSim.scala  SectorBufSim.scala  SectorBufWrSim.scala  UartBridgeSim.scala  UartLoopbackSim.scala  UartRxSim.scala  UartTxSim.scala
notes/: analyze_bin_bytes.py  emmc_protocol_commands.md  map_pwr_dbm.py  parse_pwr.py
sim/: Makefile  pll_stub.v  tb_crc16.v  tb_crc7.v  tb_crc8.v  tb_emmc_cmd.v  tb_emmc_cmd_crc_verify.v  tb_emmc_controller.v  tb_emmc_dat.v  tb_emmc_init.v  tb_led_status.v  tb_sector_buf.v  tb_sector_buf_wr.v  tb_top_integration.v  tb_uart_bridge.v  tb_uart_loopback.v  tb_uart_rx.v  tb_uart_tx.v
src/: crc8.v  emmc_cmd.v  emmc_controller.v  emmc_crc16.v  emmc_crc7.v  emmc_dat.v  emmc_init.v  fpga_and_rust.code-workspace  led_status.v  pll.v  sector_buf.v  sector_buf_wr.v  tangnano9k.cst  tangnano9k.sdc  tangnano9k_fifo.cst  tangnano9k_fifo.sdc  top.v  top_fifo.v  uart_bridge.v  uart_rx.v  uart_tx.v
tools/: README.md  emmc_tool.py  ext4_utils.py  fifo_transport.py  repair_dump.py  speed_test.py
tools/emmc_tool_rs/: Cargo.toml
tools/emmc_tool_rs/src/: cli.rs  emmc.rs  error.rs  main.rs  partition.rs  protocol.rs  rpmb.rs  transport.rs
tools/emmc_tool_rs/src/commands/: core.rs  ext4_cmds.rs  mod.rs  partition_cmds.rs  rpmb_cmds.rs
tools/emmc_tool_rs/src/ext4/: checksum.rs  directory.rs  file_ops.rs  inode.rs  mod.rs  superblock.rs
