[workspace]
members = [
    "crates/programmer-hal",
    "crates/programmer-fpga",
    "crates/programmer-engine",
    "crates/programmer-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossbeam-channel = "0.5"
serialport = "4"
eframe = "0.33"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
