[package]
name = "emmc_tool"
version = "0.1.0"
edition = "2021"
description = "eMMC Card Reader Tool for Tang Nano 9K"

[dependencies]
clap = { version = "4", features = ["derive"] }
serialport = "4"
anyhow = "1"
thiserror = "2"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
regex = "1"
hmac = "0.12"
sha2 = "0.10"
zip = "2"

[profile.release]
opt-level = 3
lto = true
