[package]
name = "emmc-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serialport.workspace = true
byteorder.workspace = true
crc.workspace = true
zip.workspace = true
base64.workspace = true
tempfile.workspace = true
hmac.workspace = true
sha2.workspace = true
tracing-subscriber = { version = "0.3", optional = true }
rusb = { version = "0.9", optional = true }

[[bin]]
name = "test_ext4_read"
path = "src/bin/test_ext4_read.rs"
required-features = ["test-bins"]

[[bin]]
name = "test_read_check"
path = "src/bin/test_read_check.rs"
required-features = ["test-bins"]

[features]
test-bins = ["tracing-subscriber"]
fifo = ["rusb"]
